--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
     "qs": "^6.14.0",
     "react": "^19.1.0",
@@ -18,6 +19,7 @@
     "react-router-dom": "^7.6.3",
     "react-slick": "^0.30.3",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
